RESOLVED FIXED298799
[Smart Lists] Conversion from HTML to NSAttributedString fails if an unordered list starts with a negative value
https://bugs.webkit.org/show_bug.cgi?id=298799
Summary [Smart Lists] Conversion from HTML to NSAttributedString fails if an unordere...
Richard Robinson
Reported 2025-09-12 15:49:02 PDT
.
Attachments
Radar WebKit Bug Importer
Comment 1 2025-09-12 15:49:14 PDT
Richard Robinson
Comment 2 2025-09-12 15:50:59 PDT
EWS
Comment 3 2025-09-12 17:46:19 PDT
Committed 299922@main (076a1fcf6ac3): <https://commits.webkit.org/299922@main> Reviewed commits have been landed. Closing PR #50681 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.