[Smart Lists] Conversion from HTML to NSAttributedString fails if an unordered list starts with a negative value https://bugs.webkit.org/show_bug.cgi?id=298799 rdar://160497353

Reviewed by Aditya Keerthi.

It is valid (albeit not that common) in both HTML and AppKit/UIKit to have an ordered list that starts at a negative value.
Therefore, remove this invalid validator.

* Source/WebKit/Shared/Cocoa/WebCoreArgumentCodersCocoa.serialization.in:
* Tools/TestWebKitAPI/Tests/WebKitCocoa/WKWebViewGetContents.mm:
(TestWebKitAPI::TEST(WKWebView, AttributedStringFromListWithNegativeStartValue)):
(TestWebKitAPI::TEST(WKWebView, AttributedStringFromListWithCustomListStyleTypes)): Deleted.
(TestWebKitAPI::AttributedStringWithoutNetworkLoads)): Deleted.
(TestWebKitAPI::AttributedStringWithSourceApplicationBundleID)): Deleted.
(TestWebKitAPI::TextWithWebFontAsAttributedString)): Deleted.
(TestWebKitAPI::AttributedStringAndCDATASection)): Deleted.
(TestWebKitAPI::AttributedStringIncludesUserSelectNoneContent)): Deleted.
(TestWebKitAPI::RequestAllTextRunsWithSubframes)): Deleted.

Canonical link: https://commits.webkit.org/299922@main